Adicionando botão 'exportar csv' e botão 'versão final'

--- a/src/static/scss/components/_app-tag.scss
+++ b/src/static/scss/components/_app-tag.scss
@@ -103,6 +103,20 @@
     }
   }
 
+  &.-results {
+    background-color: #2DA965;
+
+    & > a {
+      color: white;
+      font-weight: 600;
+    }
+
+    & > .icon {
+      @include mask-icon('comment-black');
+    }
+
+  }
+
   // &.-csv {
   //   & > a {
   //     font-weight: 600;
