Tornando toda área dos botões clicáveis

--- a/src/static/scss/components/_app-tag.scss
+++ b/src/static/scss/components/_app-tag.scss
@@ -106,14 +106,11 @@
   &.-results {
     background-color: #2DA965;
 
-    & > a {
+    & a {
       color: white;
       font-weight: 600;
     }
 
-    & > .icon {
-      @include mask-icon('comment-black');
-    }
 
   }
 
