TD - Link do projeto (#269)
* Adicionando botão para o resultado participação

* Modificando estilo da fonte da página de diff

Signed-off-by: Teogenes Moura <mourateogenes@gmail.com>

* Adicionando botão 'exportar csv' e botão 'versão final'

* Tornando toda área dos botões clicáveis

--- a/src/static/scss/components/_app-tag.scss
+++ b/src/static/scss/components/_app-tag.scss
@@ -103,6 +103,17 @@
     }
   }
 
+  &.-results {
+    background-color: #2DA965;
+
+    & a {
+      color: white;
+      font-weight: 600;
+    }
+
+
+  }
+
   // &.-csv {
   //   & > a {
   //     font-weight: 600;
