--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -15,22 +15,32 @@
       <i class="icon" alt="Votos"></i>
       <span class="label">{{group|group_votes}} Votos</span>
     </li>
-    <li class="app-tag -button">
-      <span class="label"><a href="{% url 'download-csv' group.id %}">CSV</a></span>
-    </li>
+    
+    {% if  group.group_status == "finished"%}
+    
+      <li class="app-tag -button -results">
+        <a class="label" href="{% url 'diff_version' object.id %}" >Ver texto final</a>
+      </li>
+    
+    {% endif %}
+
   </ul>
   <header>
-    <div class="info">
-      {% now "Y-m-d" as todays_date %}
-      {% if group.closing_date|date:"Y-m-d" >= todays_date %}
-      <span class="date -active">Aberto até {{group.closing_date|date:'d/m/Y'}}</span>
-      {% else %}
-      <span class="date -inactive">Encerrado em {{group.closing_date|date:'d/m/Y'}}</span>
-      {% endif %}
-    </div>
-    <h1 class="js-documentTitle" contentEditable="true">{{ object.title }}</h1>
+
+    <h1 class="js-documentTitle" >{{ object.title }}</h1>
     <p class="js-documentDescription description">{{ object.description }}</p>
+    <div class="infoBottom">
+
+          {% now "Y-m-d" as todays_date %}
+          <span class="date -inactive">Encerrado em {{group.closing_date|date:'d/m/Y'}}</span>
+          <a href="{% url 'download-csv' group.id %}"><span class="date -csvExport">Exportar CSV </span>{% include "svgs/export-icon.html" %}</a>
+    </div>
+
+
+    
+
     <hr>
+
   </header>
   <div class="minimap">
     <canvas class="page-minimap js-pageMinimap"></canvas>
