--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -1,12 +1,22 @@
 .document-editor.-active {
-  padding-left: 27rem;
-
-  & > .side-bar {
-    transform: translateX(0);
-  }
-
-  & > .side-bar > .toggle::before {
+  @include bp-largeup {
+    padding-left: 27rem;
+    & > .side-bar {
+      transform: translateX(0);
+    }
+    & > .side-bar > .toggle::before {
     transform: rotate(180deg);
+    }
+  }
+  @include bp-largedown {
+    & > .side-bar {
+      display: none;
+      transform: translateX(0);
+    }
+    & > .side-bar > .toggle::before {
+      z-index: 1;
+      transform: rotate(180deg);
+    }
   }
 }
 
@@ -52,10 +62,11 @@
 
 body.-analysis {
   overflow: hidden;
-
+  & h1 {
+    font-size: 1.5rem;
+  }
   & .document-editor {
     justify-content: center;
-
     height: 100%;
   }
 
@@ -63,13 +74,15 @@ body.-analysis {
     position: relative;
 
     overflow: auto;
-
+    justify-content: justify;
     max-width: calc(66ch + 7rem);
     height: 85vh;
     margin: 0;
     padding-top: 0;
-    padding-right: 7rem;
-    padding-left: 7rem;
+    @include bp-largeup {
+      padding-right: 7rem;
+      padding-left: 7rem;      
+    }
 
     &::-webkit-scrollbar {
       width: 0;
@@ -85,6 +98,7 @@ body.-analysis {
   & .document-editor:not(.-active) > article {
     margin-left: 7rem;
   }
+
 }
 
 .tip {
@@ -129,12 +143,13 @@ body.-analysis {
   width: 100%;
   min-height: 100%;
   margin: 0;
-  padding: 0;
-  padding-top: 3.75rem;
-  padding-right: 5rem;
-
+  @include bp-largeup {
+    padding: 3.75rem 5rem 0rem 0rem;
+  }
+  @include bp-largedown {
+    padding: 3.75rem 1.5rem 0rem 1.5rem;
+  }
   transition: all .25s $swift-out;
-
   &::before {
     position: fixed;
     z-index: 1;
@@ -198,7 +213,16 @@ body.-analysis {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    @include bp-largedown {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      margin-bottom: 1rem;
+      a {
+        display:flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+      }
+    }
     margin-bottom: 0rem;
   }
 
@@ -207,17 +231,22 @@ body.-analysis {
     position: sticky;
     z-index: 4;
     top: 0;
-
     display: flex;
     width: 100%;
-    margin-bottom: 2rem;
     padding: 1rem 0 2rem 0;
-
     background-image: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 70%, rgba(255, 255, 255, 0) 100%);
+  
+    @include bp-largedown {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
   } 
 
-  & > .article > .tags > .app-tag {
+  & > article > .tags > .app-tag {
     @include card-shadow;
+    @include bp-largedown {
+      margin: 5%;
+    }
   }
 
   & > article > .tags > * + * {
@@ -243,6 +272,10 @@ body.-analysis {
     color:#949494;
     align-content: flex-end;
     text-align: right;
+    justify-content: center;
+    @include bp-largedown {
+      padding-right: 4%;
+    }
   }
 
 
