--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -29,7 +29,7 @@
 
 <div class="input-text -congressman js-congressman -required" data-api-url="{{api_url}}" data-legislature="{{legislature}}">
   <input class="js-inputAutocomplete" type="text" name="title" required id="id_congressman">
-  <label for="id_congressman">Deputado responsavel:</label>
+  <label for="id_congressman">Deputado(a) responsavel:</label>
 </div>
 <div class="input-text -required">
   <input type="text" class="js-urlVideo" required id="link_video">
