--- a/src/templates/emails/closed-participation-owner.html
+++ b/src/templates/emails/closed-participation-owner.html
@@ -15,7 +15,7 @@
 		<p>A partir de agora, os cidadãos
 			aguardam o resultado final da participação, que deverá contemplar o texto
 			consolidado da proposição com as opiniões eventualmente acatadas,
-			bem como um vídeo de feedback do deputado, justificando a incorporação ou não das
+			bem como um vídeo de feedback do deputado(a), justificando a incorporação ou não das
 			sugestões e agradecendo o engajamento da sociedade.</p>
 	</tr>
 	<tr class="center">
