--- a/src/templates/emails/feedback_authorization.html
+++ b/src/templates/emails/feedback_authorization.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   <tr class="center">
-    Senhor Deputado,
+    Senhor Deputado(a),
   </tr>
   <tr class="center">
     A sua consulta pública sobre o proposição legislativa abaixo encontra-se encerrada:
@@ -20,7 +20,7 @@
     {% if document.document_type and document.year and document.number %} {{ document.document_type.initials }} {{ document.number }}/{{ document.year }} {% else %} {{ document.title }} {% endif %}
   </tr>
   <tr class="center">
-    A partir de agora, os cidadãos aguardam o resultado final da participação, que deverá contemplar o texto consolidado da proposição com as opiniões eventualmente acatadas, bem como um vídeo de feedback do deputado, justificando a incorporação ou não das sugestões e agradecendo o engajamento da sociedade.
+    A partir de agora, os cidadãos aguardam o resultado final da participação, que deverá contemplar o texto consolidado da proposição com as opiniões eventualmente acatadas, bem como um vídeo de feedback do deputado(a), justificando a incorporação ou não das sugestões e agradecendo o engajamento da sociedade.
   </tr>
   <tr class="center">
     O sistema notificará automaticamente os usuários quando esses conteúdos forem disponibilizados, assim como, no caso de não disponibilização, os manterá informados do tempo decorrido desde o encerramento da consulta pública, enquanto o resultado final não for enviado.
