--- a/src/templates/emails/feedback_authorization_management.html
+++ b/src/templates/emails/feedback_authorization_management.html
@@ -14,7 +14,7 @@
   Feedback autorizado!
   </tr>
   <tr class="center">
-  O Deputado analisou a versão do documento selecionada pelo servidor responsável pela consulta pública e validou as diferenças entre ela e a versão original. Agora é preciso que você revise todos os detalhes antes da disponibilização da devolutiva à sociedade.
+  O Deputado(a) analisou a versão do documento selecionada pelo servidor responsável pela consulta pública e validou as diferenças entre ela e a versão original. Agora é preciso que você revise todos os detalhes antes da disponibilização da devolutiva à sociedade.
   </tr>
 
   <tr class="center">
