--- a/src/templates/emails/feedback_authorization_management2owner.html
+++ b/src/templates/emails/feedback_authorization_management2owner.html
@@ -14,7 +14,7 @@
     Devolutiva autorizada!
   </tr>
   <tr class="center">
-    O órgão gestor analisou a versão do documento selecionada por você e validou as informações. Agora a devolutiva do deputado sobre a participação está publicada e disponível para sociedade. 
+    O órgão gestor analisou a versão do documento selecionada por você e validou as informações. Agora a devolutiva do deputado(a) sobre a participação está publicada e disponível para sociedade. 
   </tr>
 {% endblock content %}
 
