--- a/src/templates/emails/feedback_authorization_owner.html
+++ b/src/templates/emails/feedback_authorization_owner.html
@@ -14,6 +14,6 @@
     Devolutiva autorizada!
   </tr>
   <tr class="center">
-    O Deputado analisou a versão do documento selecionada por você e validou as diferenças entre ela e a versão original, inicialmente disponibilizada para consulta pública. Diante da autorização do parlamentar, agora a equipe técnica revisará todos os detalhes antes da publicação final da devolutiva.
+    O Deputado(a) analisou a versão do documento selecionada por você e validou as diferenças entre ela e a versão original, inicialmente disponibilizada para consulta pública. Diante da autorização do parlamentar, agora a equipe técnica revisará todos os detalhes antes da publicação final da devolutiva.
   </tr>
 {% endblock content %}
