--- a/src/templates/emails/feedback_unauthorization_owner.html
+++ b/src/templates/emails/feedback_unauthorization_owner.html
@@ -14,6 +14,6 @@
     Devolutiva não autorizada!
   </tr>
   <tr class="center">
-  O Deputado analisou a versão do documento selecionada por você e não validou as diferenças entre ela e a versão original. Por favor, entre em contato com ele para escolher a versão correta para ser disponibilizada como devolutiva à sociedade.
+  O Deputado(a) analisou a versão do documento selecionada por você e não validou as diferenças entre ela e a versão original. Por favor, entre em contato com ele para escolher a versão correta para ser disponibilizada como devolutiva à sociedade.
   </tr>
 {% endblock content %}
