--- a/src/templates/pages/feedback_disclaimer.html
+++ b/src/templates/pages/feedback_disclaimer.html
@@ -21,7 +21,7 @@
             <br><br>
             Clicando em "SIM", a plataforma ficará acessível para qualquer cidadão analisar o texto final
             consolidado da proposição com as opiniões eventualmente acatadas,
-            bem como o vídeo de feedback do deputado, justificando a incorporação ou não das sugestões e agradecendo o
+            bem como o vídeo de feedback do deputado(a), justificando a incorporação ou não das sugestões e agradecendo o
             engajamento da sociedade.
             <br><br>
             Caso encontre algum erro, por favor clique em "NÃO" e entre em contato com a equipe de gestão do Wikilegis
