--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -240,7 +240,7 @@
             <p class="closed">Aguardando análise</p>
             {% else %}
             <img src="{% static 'img/hourglass.svg' %}" alt="">
-            <p class="-onhold"><span>Aguardando resposta</span>do deputado há
+            <p class="-onhold"><span>Aguardando resposta</span>do deputado(a) há
               {{ closed_group.closing_date |absolute_days_since }} dias</p>
             {% endif %}
           </div>
