--- a/src/templates/pages/public_participation_disclaimer.html
+++ b/src/templates/pages/public_participation_disclaimer.html
@@ -17,7 +17,7 @@
 			Título: {{document.title}}
 			{% endif %}
 			<br><br>
-			Clicando em "SIM", a plataforma estará acessível para que qualquer cidadão possa sugerir modificações no texto da proposição, até a data de {{closing_date}}. Ao final desse prazo, os participantes deverão receber o resultado final da consulta pública, que contempla o texto consolidado da proposição com as opiniões eventualmente acatadas, bem como um vídeo de feedback do deputado, justificando a incorporação ou não das sugestões e agradecendo o engajamento da sociedade. O sistema notificará automaticamente os usuários quando esses conteúdos forem disponibilizados, assim como, no caso de não disponibilização, os manterá informados do tempo decorrido desde o encerramento da consulta pública enquanto o resultado final não for enviado.
+			Clicando em "SIM", a plataforma estará acessível para que qualquer cidadão possa sugerir modificações no texto da proposição, até a data de {{closing_date}}. Ao final desse prazo, os participantes deverão receber o resultado final da consulta pública, que contempla o texto consolidado da proposição com as opiniões eventualmente acatadas, bem como um vídeo de feedback do deputado(a), justificando a incorporação ou não das sugestões e agradecendo o engajamento da sociedade. O sistema notificará automaticamente os usuários quando esses conteúdos forem disponibilizados, assim como, no caso de não disponibilização, os manterá informados do tempo decorrido desde o encerramento da consulta pública enquanto o resultado final não for enviado.
 			<br><br>
 			Caso encontre algum erro, por favor clique em "NÃO" e entre em contato com a equipe de gestão do Wikilegis pelo telefone (61) 3216-6012 ou email labhacker@camara.leg.br" 	
 		</div>
