implemented icon which opens a modal with video help on how to use the platform

--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -37,9 +37,9 @@
       {% include "svgs/download-icon.html" %}
     </a>
   </div>
-
-    <a href="#" class="icon js-videoHelper video-helper" aria-label="Ver vídeo de ajuda">
+  <center>
+    <a href="#" class="icon video-helper" aria-label="Ver vídeo de ajuda">
       {% include "svgs/question-icon.html" %}
     </a>
-
+  </center>
 </aside>
