--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -208,6 +208,7 @@
 {% include "components/feedback-info-modal.html" %}
 {% include "components/feedback-waiting-modal.html" %}
 {% include "components/save-modal.html" %}
+{% include "components/video-helper-modal.html" %}
 
 {% endblock content %}
 
@@ -231,6 +232,7 @@
 <script src="{% static 'js/components/infoMessage/view.js' %}"></script>
 <script src="{% static 'js/components/saveMessage/view.js' %}"></script>
 <script src="{% static 'js/components/saveModal/view.js' %}"></script>
+<script src="{% static 'js/components/videoHelperModal/view.js' %}"></script>
 <script src="{% static 'js/components/documentEditor/controller.js' %}"></script>
 <script src="{% static 'js/components/documentEditor/view.js' %}"></script>
 <script src="{% static 'js/components/toolBar/controller.js' %}"></script>
