'ok' button now closes modal

--- a/src/templates/components/video-helper-modal.html
+++ b/src/templates/components/video-helper-modal.html
@@ -15,6 +15,6 @@
 	  <br>
 	  <center><iframe style="margin-top: 5%;" width="560" height="315" src="https://www.youtube.com/embed/7ZBNuBvwifg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 	  <br>
-	  <center><button style="margin-top: 5%;" class="app-button -green js-send"><span class="load _hidden js-load"></span><span class="js-text">Ok!</span></button></center>
+	  <center><button style="margin-top: 5%;" class="app-button -green js-send"><span class="load _hidden js-load"></span><span class="js-text js-closeModal">Ok!</span></button></center>
   </div>
 {% endblock content %}
