implemented document card text substitution for texts larger then 300 characters

--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -276,7 +276,7 @@
 <script src="{% static 'js/components/howtoButton/view.js' %}"></script>
 <script src="{% static 'js/components/appOnboarding/view.js' %}"></script>
 <script src="{% static 'js/components/infoMessage/view.js' %}"></script>
-
+<script src="{% static 'js/components/documentCard/view.js' %}"></script>
 <script src="{% static 'js/pages/home.js' %}"></script>
 
 {% endblock page_js %}
