add condition to create document video if url video exists #347

--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -31,8 +31,8 @@
   <input class="js-inputAutocomplete" type="text" name="title" required id="id_congressman">
   <label for="id_congressman">Deputado(a) responsavel:</label>
 </div>
-<div class="input-text -required">
-  <input type="text" class="js-urlVideo" required id="link_video">
+<div class="input-text">
+  <input type="text" class="js-urlVideo" id="link_video">
   <label for="link_video">Link do YouTube: </label>
 </div>
 
