--- a/src/templates/components/document-info.html
+++ b/src/templates/components/document-info.html
@@ -1,3 +1,5 @@
+{% load projects_tags %}
+
 <div class="howtowrapper">
   <div class="howto-button -sidebar js-howtoButton" aria-label="Como participar"></div>
 </div>
@@ -66,9 +68,11 @@
   </ul>
 </div>
 {% endif %}
+{% if not object.closing_date|is_open %}
 <div class="item">
   <a class="estatistica" href="{% url 'group-analysis' object.id object.document.slug %}">Estatísticas</a>
 </div>
+{% endif %}
 {% if object.document.videos.all %}
   {% for video in object.document.videos.all %}
   <div class="item -video">
