fix condition to show epigraph only have type, number and year fields #347

--- a/src/templates/components/document-info.html
+++ b/src/templates/components/document-info.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="item">
-  {% if object.document.document_type %}
+  {% if object.document.document_type and object.document.number and object.document.year %}
   <span class="epigraph">{{ object.document.document_type.initials }} {{ object.document.number }}/{{ object.document.year }}</span>
   {% endif %}
 </div>
