--- a/src/templates/components/info-modal.html
+++ b/src/templates/components/info-modal.html
@@ -16,7 +16,7 @@
   {% if object.closing_date|is_open %}
   <span class="date -active">Aberto até {{ object.closing_date|date:"d/m/Y" }}</span>
   {% else %}
-  <span class="date -inactive">Encerrado em {{ object.closing_date|date:"d/m/Y" }}</span>
+  <span class="date -inactive">Participação encerrada em {{ object.closing_date|date:"d/m/Y" }}</span>
   {% endif %}
   {% include "components/document-info.html" %}
 </div>
