Updating closed-participant-owner email text

--- a/src/templates/emails/closed-participation-owner.html
+++ b/src/templates/emails/closed-participation-owner.html
@@ -12,17 +12,14 @@
 
 {% block content %}
 	<tr class="center">
-		<p>A partir de agora, os cidadãos
-			aguardam o resultado final da participação, que deverá contemplar o texto
-			consolidado da proposição com as opiniões eventualmente acatadas,
-			bem como um vídeo de feedback do deputado(a), justificando a incorporação ou não das
-			sugestões e agradecendo o engajamento da sociedade.</p>
+		<p>
+			A partir de agora, os cidadãos aguardam o resultado final da participação, que deverá contemplar o texto consolidado da proposição com as opiniões eventualmente acatadas,
+			É possível inserir opcionalmente um vídeo de feedback do(a) deputado(a), justificando a incorporação ou não das sugestões e/ou agradecendo o engajamento da sociedade.
+		</p>
 	</tr>
 	<tr class="center">
-		<p>O sistema notificará
-			automaticamente os usuários quando esses conteúdos forem disponibilizados, assim
-			como, no caso de não disponibilização, os manterá informados do tempo decorrido
-			desde o encerramento da consulta pública, enquanto o resultado final não for
-			enviado.</p>
+		<p>
+			O sistema notificará automaticamente os usuários quando esses conteúdos forem disponibilizados. 
+		</p>
 	</tr>
 {% endblock content %}
