Updating owner invitation email

--- a/src/templates/emails/owner_invitation.html
+++ b/src/templates/emails/owner_invitation.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   <tr class="center">
-    Analise as propostas legislativas e contribua com sugestões de nova redação a artigos ou paragrafos. Os deputados e deputadas relatores das proposições acompanham as participações e podem adotar a sua ideia!
+    Analise as propostas legislativas e contribua com sugestões de nova redação a artigos ou parágrafos.!
   </tr>
   <tr class="center">
     Nessa intera&ccedil;&atilde;o, ganha a sociedade, que participa mais ativamente do processo legislativo, e ganha o Parlamento, que aprova leis mais aprimoradas e conectadas &agrave;s necessidades dos cidad&atilde;os.
