--- a/src/templates/components/participation-info-modal.html
+++ b/src/templates/components/participation-info-modal.html
@@ -10,6 +10,6 @@
 
 {% block content %}
 <h1>Quase lá 😉</h1>
-<p>Enviamos uma solicitação para o deputado(a) confirmar a abertura pública da proposta legislativa. Pedimos um prazo de até 2 dias úteis para te dar uma resposta.</p>
+<p>Enviada solicitação para o(a) deputado(a) confirmar a abertura da consulta pública. Após a aprovação, a participação estará aberta.</p>
 <button class="app-button -green js-close">Fechar</button>
 {% endblock content %}
