add conditions to feedback video is not required

--- a/src/templates/components/feedback-modal.html
+++ b/src/templates/components/feedback-modal.html
@@ -26,7 +26,7 @@
             <div class="icon"><i class="arrow"></i></div>
         </div>
     </div>
-    <div class="input-text -required">
+    <div class="input-text">
         <input class="js-youtubeId" type="text" name="youtube_url" required id="id_youtube_url">
         <label for="youtube_url">Link do youtube:</label>
     </div>
