fix django.po messages

--- a/src/templates/components/feedback-modal.html
+++ b/src/templates/components/feedback-modal.html
@@ -16,7 +16,7 @@
 {% block content %}
 <form>
     <h1 class="js-titleModal">Definir documento final</h1>
-    <p>Defina uam versão final e adicione um vídeo de agradecimento aos participantes.</p>
+    <p>Defina uma versão final e adicione um vídeo de agradecimento aos participantes.</p>
     <ul class="errorlist nonfield js-formError"></ul>
     <div class="input-select -required">
         <div class="select">
