--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -30,9 +30,12 @@
     <h1 class="js-documentTitle" >{{ object.title }}</h1>
     <p class="js-documentDescription description">{{ object.description }}</p>
     <div class="infoBottom">
-
           {% now "Y-m-d" as todays_date %}
+          {% if group.closing_date|date:"Y-m-d" >= todays_date %}
+          <span class="date -active">Aberto até {{group.closing_date|date:'d/m/Y'}}</span>
+          {% else %}
           <span class="date -inactive">Participação encerrada em {{group.closing_date|date:'d/m/Y'}}</span>
+          {% endif %}
           <a href="{% url 'download-csv' group.id %}"><span class="date -csvExport">Exportar CSV </span>{% include "svgs/export-icon.html" %}</a>
     </div>
 
