add text in feedback modals

--- a/src/templates/components/feedback-info-modal.html
+++ b/src/templates/components/feedback-info-modal.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 <h1>Adicionar Versão e Vídeo Final</h1>
-<p>Texto Explicativo.</p>
+<p>Insira a versão do texto consolidado da proposição com as opiniões eventualmente acatadas para publicação. A inserção do vídeo é opcional, mas serve para o(a) parlamentar agradecer pessoalmente a todos os cidadãos que contribuíram com o projeto.</p>
 <button class="app-button -green js-openFeedback">Continuar</button>
 {% endblock content %}
