--- a/src/templates/components/feedback-waiting-modal.html
+++ b/src/templates/components/feedback-waiting-modal.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 <h1>Aguardando Autorização</h1>
-<p>Texto Explicativo.</p>
+<p>Enviada solicitação para o(a) deputado(a) validar a versão indicada como resultado da participação do público. Depois da autorização do deputado, a equipe do orgão gestor da ferramenta revisará os detalhes para a publicação final.</p>
 <button class="app-button -green js-close">Entendi</button>
 {% endblock content %}
